# rafen

./: .gitignore  README.md  dvc.yaml  mlflow.env  pyproject.toml  use_cached_random_walks.sh
.dvc/: config
data/raw/: real.dvc
docker/: apt.packages
docker/mlflow/: .gitignore  docker-compose.yaml  mlflow.Dockerfile  purge_docker_compose_data.sh
experiments/configs/: alpha_grid_search.yaml  alpha_grid_search_gae.yaml  precompute_temporal_scores.yaml  split_graphs.yaml
experiments/configs/lp/: evaluate_lp.yaml  evaluate_lp_full.yaml  evaluate_lp_posthoc.yaml
experiments/configs/models/: GAE.yaml  Node2Vec.yaml  RAFENGAE_ALL.yaml  RAFENGAE_ALL_Alpha.yaml  RAFENGAE_EJ_Alpha.yaml  RAFENGAE_EJ_Weighted.yaml  RAFENGAE_TB_Alpha.yaml  RAFENGAE_TB_Weighted.yaml  RAFENNode2Vec_ALL_Alpha.yaml  RAFENNode2Vec_EJ_Alpha.yaml  RAFENNode2Vec_EJ_Weighted.yaml  RAFENNode2Vec_TB_Alpha.yaml  RAFENNode2Vec_TB_Weighted.yaml  common.yaml
experiments/configs/posthoc/: PosthocALL.yaml  PosthocEJ.yaml  PosthocTB.yaml
experiments/scripts/: align_posthoc.py  alpha_grid_search.py  check_methods_knowledge_transfer.py  convert_nx_graphs_to_tg_data.py  embed_aligned_graphs.py  embed_graphs.py  evaluate_lp.py  generate_lp_datasets.py  merge_graphs.py  precompute_temporal_scores.py  sample_random_walks.py  split_graphs.py
notebooks/: Aligners_losses_analysis.ipynb  Aligners_n2v_distances_ratios_analysis.ipynb  Alphas_analysis_[todo].ipynb  Check_Knowledge_Transfer_Capabilities.ipynb  Embeddings_calculation_time_analysis.ipynb  Enhanced_embeddings_calculation_time_analysis.ipynb  Remove_mlflow_experiments.ipynb  Result_Summary.ipynb  Results_new.ipynb  Results_with_tables.ipynb  Scores_and_ref_nodes_analysis.ipynb
rafen/activity_scoring/: selectors.py  temporal_scores.py
rafen/alignment/: posthoc.py
rafen/data/: snapshot_generator.py
rafen/embeddings/: aggregation.py  edge_representation.py  fildne.py  keyedmodel.py
rafen/experiments/: defaults.py  metadata.py  parsers.py  paths.py  runners.py
rafen/metrics/: classification_report.py  distances.py  roc.py
rafen/models/: base.py  gae.py  node2vec.py  posthoc.py  rafen_gae.py  rafen_node2vec.py  random_walk_samplers.py  regressors.py
rafen/tasks/linkprediction/: dataset.py  evaluation.py  models.py
rafen/utils/: io.py  misc.py  mlflow_logger.py  mlflow_utils.py  plotly_utils.py  preprocess.py  tg.py
