[tool.black]
line-length = 80
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.dvc
    | _build
    | buck-out
    | build
    | dist
    | data
    | custom_loss
    | venv
  )/
)
'''


[tool.isort]
line_length = 80
known_first_party = "dynalign"
profile = "black"

[tool.poetry]
name = "reg-alignment"
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.extras]
tg = ["torch-scatter", "torch-cluster", "torch-sparse", "torch-spline-conv", "torch-geometric"]

[tool.poe.tasks]
black = "black --check ./"
isort = "isort . -c"
black_fix = "black ./"
isort_fix = "isort . "
pyflakes = "pyflakes ."
fix = ["black_fix", "isort_fix"]
force-torch-cuda = "python -m pip install torch==1.11.0+cu113 --extra-index-url https://download.pytorch.org/whl/cu113"
force-torch-cluster-cuda = "python -m pip install torch-cluster==\"1.6.0\" -f https://data.pyg.org/whl/torch-1.11.0+cu113.html"
force-torch-scatter-cuda = "python -m pip install torch-scatter==\"2.0.9\" -f https://data.pyg.org/whl/torch-1.11.0+cu113.html"
force-torch-sparse-cuda = "python -m pip install torch-sparse==\"0.6.13\" -f https://data.pyg.org/whl/torch-1.11.0+cu113.html"
force-torch-spline-conv-cuda = "python -m pip install torch-spline-conv==\"1.2.1\" -f https://data.pyg.org/whl/torch-1.11.0+cu113.html"
force-torch-geometric-cuda = "python -m pip install torch-geometric==\"2.0.4\" -f https://data.pyg.org/whl/torch-1.11.0+cu113.html"
force_cuda = ["force-torch-cuda", "force-torch-cluster-cuda", "force-torch-scatter-cuda", "force-torch-sparse-cuda", "force-torch-spline-conv-cuda", "force-torch-geometric-cuda"]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.10"
protobuf = "3.20.0"
scipy = ">=1.2.1"
networkx = ">=2.2"
setuptools = ">=40.8.0"
numpy = ">=1.16.1"
pandas = ">=0.24.1"
gensim = ">=3.7.1"
scikit-learn = ">=0.20.2"
tqdm = ">=4.36.1"
PyYAML = ">=5.1.1"
papermill = ">=2.0"
jupyter = ">=1.0.0"
seaborn = "^0.11.2"
pathpy = "^2.2.0"
typer = "^0.4.1"
black = "^22.3.0"
isort = "^5.10.1"
plotly = "^5.8.0"
pyflakes = "^2.4.0"
hyperopt = "0.2.5"
dvc = {extras = ["s3"], version = "^2.10.2"}
mlflow = "1.20.2"
torch = "1.11.0"
torch-scatter = {version = "2.0.9", optional = true}
torch-cluster = {version = "1.6.0", optional = true}
torch-sparse = {version = "0.6.13", optional = true}
torch-spline-conv = {version = "1.2.1", optional = true}
torch-geometric = {version = "2.0.4", optional = true}
poethepoet = "^0.13.1"
statsmodels = "^0.13.2"
